@@ -1,3 +1,13 @@
+2003-05-30  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h
+	(SAVESTK_0): Add CFI directives.
+	(SAVESTK_3): Likewise.
+	(SAVESTK_5): Likewise.
+	(RESTSTK_0): Likewise.
+	(RESTSTK_3): Likewise.
+	(RESTSTK_5): Likewise.
+
 2003-05-05  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/i386/tls.h (TLS_DO_SET_THREAD_AREA): Add \n to error
